<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textview_string">My Nanodegree Apps!</string>
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores">POPULAR MOVIES</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_bigger">BUILD IT BIGGER</string>
    <string name="btn_reader">XYZ READER</string>
    <string name="btn_capstone">CAPSTONE:MY OWN APP</string>

    <string name="selected_option_popularity">populariy</string>

    <!--  strings /xml/pref_general.xml-->
    <string name="pref_order_label">Order by</string>
    <string name="pref_order_key">order</string>
    <string name="pref_order_default">popularity</string>
    <string-array name="pref_order_entries">
        <item>Movies by most popular</item>
        <item>Movies by highest rated</item>
        <item>Movies by favorites</item>
    </string-array>
    <string name="pref_popularity">popularity</string>
    <string name="pref_rate">rate</string>
    <string name="pref_favorites">favorites</string>
    <string-array name="pref_order_values">
        <item>@string/pref_popularity</item>
        <item>@string/pref_rate</item>
        <item>@string/pref_favorites</item>
    </string-array>
    <!--  strings fragment_detail-->
    <string name="detail_runtime">Run time:</string>
    <string name="detail_release_date_text">Release date:</string>
    <string name="detail_rate_text">Rating:</string>
    <string name="detail_inner_rl_gravity">center</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <!--  main activity title -->
    <string name="mainactivity_title_popularity">Movies by popularity</string>
    <string name="mainactivity_title_rate">Movies by rate</string>
    <string name="mainactivity_title_favorites">Favorites movies</string>
    <string name="title_activity_reviews_detail">ReviewsDetail</string>
    <!--  favorites strings -->
    <string name="favorites_add">ADD TO FAVORITES</string>
    <string name="favorites_remove">REMOVE FROM FAVORITES</string>
</resources>
