<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/title_margintop"
            android:text="@string/textview_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnSpotify"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btnspotify_margintop"
            android:background="@color/orange"
            android:text="@string/btn_spotify"
            android:onClick="showToast" />

        <Button
            android:id="@+id/btnScores"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSpotify"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/buttons_margin"
            android:background="@color/orange"
            android:text="@string/btn_scores"
            android:onClick="showToast" />

        <Button
            android:id="@+id/btnLibrary"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnScores"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/buttons_margin"
            android:background="@color/orange"
            android:text="@string/btn_library"
            android:onClick="showToast" />

        <Button
            android:id="@+id/btnBigger"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLibrary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/buttons_margin"
            android:background="@color/orange"
            android:text="@string/btn_bigger"
            android:onClick="showToast" />

        <Button
            android:id="@+id/btnReader"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBigger"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/buttons_margin"
            android:background="@color/orange"
            android:text="@string/btn_reader"
            android:onClick="showToast" />

        <Button
            android:id="@+id/btnCapstone"
            android:layout_width="@dimen/buttons_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnReader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/buttons_margin"
            android:background="@color/dark_pink"
            android:text="@string/btn_capstone"
            android:onClick="showToast" />
    </RelativeLayout>
</ScrollView>