<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <!--   android:fillViewport="true" -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context="com.carlos.myappportfolio.themoviedb.DetailActivityFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_title_height"
            android:background="@color/teal"
            android:paddingLeft="@dimen/detail_title_paddinLeft"
            android:paddingTop="@dimen/detail_title_paddinTop"
            android:text="prueba"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_title_textSize"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="@dimen/detail_image_width"
                    android:layout_height="@dimen/detail_image_height"


                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_layout_height"
                        android:gravity="center"
                        android:text="@string/detail_runtime" />

                    <TextView
                        android:id="@+id/tvRunTime"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_layout_height"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_layout_height"
                        android:gravity="center"
                        android:text="@string/detail_release_date_text" />

                    <TextView
                        android:id="@+id/tvReleaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_layout_height"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_layout_height"
                        android:gravity="center"
                        android:text="@string/detail_rate_text" />

                    <TextView
                        android:id="@+id/tvRate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_layout_height"
                        android:gravity="center" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">



                        <Button
                            android:id="@+id/btnFavorite"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:text="REMOVE FROM FAVORITES"
                            android:textColor="#616161"
                            android:drawableRight="@drawable/ic_favorite_outline"
                            android:background="@drawable/roundedbutton"
                             />

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#000000" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Trailers" />

            <ListView
                android:id="@+id/listViewTrailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Reviews" />

            />

            <ListView
                android:id="@+id/listViewReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>


    </LinearLayout>
</ScrollView>